# raytracing

./: .gitignore  Cargo.toml  README.md
benches/: vec3_bench.rs
src/: aabb.rs  camera.rs  color.rs  image.rs  lib.rs  main.rs  nalgebra_ext.rs  perlin.rs  rand_ext.rs  ray.rs  renderer.rs  settings.rs  time.rs  vec3.rs
src/materials/: dielectric.rs  diffuse_light.rs  diffusers.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: bvh_node.rs  constant_medium.rs  cuboid.rs  mod.rs  object_list.rs  rectangle.rs  sphere.rs  triangle.rs
src/scenes/: book_cover.rs  cornell_box.rs  cornell_smoke.rs  final_scene.rs  globe.rs  mod.rs  perlin_spheres.rs  simple_light.rs  three_spheres.rs  two_spheres.rs
src/textures/: checker.rs  image_texture.rs  mod.rs  noise.rs  solid_color.rs
