[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
coz = "0.1.3"
dyn-clonable = "0.9.0"
image = "0.24.6"
indicatif = "0.17.3"
overload = "0.1.1"
rand = "0.8.5"
rayon = "1.7.0"

[profile.release]
debug = true
