[package]
name = "raytracing"
version = "0.1.0"
authors = ["Jakob Widauer <jakob.widauer@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
dyn-clonable = "0.9.0"
image = "0.24.6"
indicatif = "0.17.3"
num_cpus = "1.15.0"
overload = "0.1.1"
prettytable-rs = "0.10.0"
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1", features = ["simd"] }
rayon = "1.7.0"
thiserror = "1.0.40"

[profile.release]
debug = true
# codegen-units = 1
# lto = true

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "vec3_bench"
harness = false
